<resources>
    <string name="app_name">KR_Android</string>

    <string name="add_automobile">Добавить автомобиль</string>
    <string name="add_user">Добавить пользователя</string>
    <string name="add_providedService">Запросить услугу</string>

    <string name="view_services">Посмотреть список услуг</string>
    <string name="users">Пользователи</string>


    <string name="service_name">Название услуги</string>
    <string name="service_price">Стоимость:</string>
    <string name="service_info">Информация об услуге</string>
    <string name="service_date">Дата оказания</string>

    <string name="user_info">Информация о пользователе</string>

    <string name="user_name">Имя пользователя</string>
    <string name="user_phone">Номер телефона</string>

    <string name="auto_info">Информация об автомобиле</string>

    <string name="auto_name">Марка и модель автомобиля</string>
    <string name="auto_mark">Марка</string>
    <string name="auto_model">Модель</string>
    <string name="auto_number">Гос. номер</string>


    <string name="list_automobiles">Список автомобилей пользователя</string>
    <string name="list_services">Список услуг детейлинг центра</string>
    <string name="list_users">Список пользователей приложения</string>
    <string name="list_providedservices">Список оказанных услуг для автомобиля</string>


    <string name="providedservice_info">Информация об оказанной услуге</string>
    <string name="providedservice_service">Услуга:</string>
    <string name="providedservice_status">Статус:</string>
    <string name="providedservice_employer">Сотрудник:</string>
    <string name="providedservice_date">Дата оказания услуги:</string>

    <string name="request_service">Запросить услугу</string>


<!--    Toasts-->
    <string name="need_choice_service">Необходимо выбрать услугу</string>
    <string name="need_choice_date">Необходимо выбрать дату</string>

    <string name="need_change_date">Выбрана недопустимая дата</string>
    <string name="need_fill_all">Необходимо заполнить все поля формы</string>
    <string name="valid_gosnumber">Гос.номер должен быть записан в формате: A111AA33rus</string>
    <string name="valid_phone">Телефон должен быть введён в формате: 8(***)***-**-**</string>
    <string name="user_exist">Данный номер телефона используется другим пользователем</string>
    <string name="automobile_exist">Данный гос.номер присвоен другому автомобилю</string>
</resources>